CSS changes and autocomplete room and future classes
