# UOIT-Room-Finder-App/src/app/models/room.ts
@@ -1,0 +1,5 @@
+export class Room {
+    room: String;
+    building: String;
+    location: Number[];
+}
